// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Navbar > Snapshot > should match snapshot on blog page 1`] = `
<div>
  <nav
    aria-label="Main navigation"
    class="mocked-archivo bg-background-elevated/80 border-border text-foreground-subtle fixed right-1/2 bottom-4 z-50 flex translate-x-1/2 items-center gap-x-6 rounded-full border px-3 py-2 shadow-lg backdrop-blur-xl *:translate-y-0.5 sm:px-4"
    role="navigation"
    style="opacity: 0; transform: translateY(100px);"
  >
    <div
      class="relative"
      style="opacity: 0; transform: translateY(20px);"
    >
      <a
        aria-label="Home"
        class="relative flex gap-2 pb-1 hover:text-foreground-muted transition-colors"
        href="/"
      >
        <span
          aria-hidden="true"
        >
          <svg
            class="size-4.5 sm:size-5"
            fill="currentColor"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M219.31,108.68l-80-80a16,16,0,0,0-22.62,0l-80,80A15.87,15.87,0,0,0,32,120v96a8,8,0,0,0,8,8h64a8,8,0,0,0,8-8V160h32v56a8,8,0,0,0,8,8h64a8,8,0,0,0,8-8V120A15.87,15.87,0,0,0,219.31,108.68ZM208,208H160V152a8,8,0,0,0-8-8H104a8,8,0,0,0-8,8v56H48V120l80-80,80,80Z"
            />
          </svg>
        </span>
        <span
          class="hidden text-sm font-medium sm:block"
        >
          Home
        </span>
      </a>
    </div>
    <div
      class="relative"
      style="opacity: 0; transform: translateY(20px);"
    >
      <a
        aria-label="Project"
        class="relative flex gap-2 pb-1 hover:text-foreground-muted transition-colors"
        href="/project"
      >
        <span
          aria-hidden="true"
        >
          <svg
            class="size-4.5 sm:size-5"
            fill="currentColor"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M71.59,61.47a8,8,0,0,0-15.18,0l-40,120A8,8,0,0,0,24,192h80a8,8,0,0,0,7.59-10.53ZM35.1,176,64,89.3,92.9,176ZM208,76a52,52,0,1,0-52,52A52.06,52.06,0,0,0,208,76Zm-88,0a36,36,0,1,1,36,36A36,36,0,0,1,120,76Zm104,68H136a8,8,0,0,0-8,8v56a8,8,0,0,0,8,8h88a8,8,0,0,0,8-8V152A8,8,0,0,0,224,144Zm-8,56H144V160h72Z"
            />
          </svg>
        </span>
        <span
          class="hidden text-sm font-medium sm:block"
        >
          Project
        </span>
      </a>
    </div>
    <div
      class="relative"
      style="opacity: 0; transform: translateY(20px);"
    >
      <a
        aria-current="page"
        aria-label="Blog, current page"
        class="relative flex gap-2 pb-1 text-mirai-red"
        href="/blog"
      >
        <span
          aria-hidden="true"
        >
          <svg
            class="size-4.5 sm:size-5"
            fill="currentColor"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M232,48H160a40,40,0,0,0-32,16A40,40,0,0,0,96,48H24a8,8,0,0,0-8,8V200a8,8,0,0,0,8,8H96a24,24,0,0,1,24,24,8,8,0,0,0,16,0,24,24,0,0,1,24-24h72a8,8,0,0,0,8-8V56A8,8,0,0,0,232,48ZM96,192H32V64H96a24,24,0,0,1,24,24V200A39.81,39.81,0,0,0,96,192Zm128,0H160a39.81,39.81,0,0,0-24,8V88a24,24,0,0,1,24-24h64ZM160,88h40a8,8,0,0,1,0,16H160a8,8,0,0,1,0-16Zm48,40a8,8,0,0,1-8,8H160a8,8,0,0,1,0-16h40A8,8,0,0,1,208,128Zm0,32a8,8,0,0,1-8,8H160a8,8,0,0,1,0-16h40A8,8,0,0,1,208,160Z"
            />
          </svg>
        </span>
        <span
          class="hidden text-sm font-medium sm:block"
        >
          Blog
        </span>
        <div
          class="bg-mirai-red absolute right-0 bottom-0 left-0 h-0.5 rounded-full"
        />
        <span
          class="sr-only"
        >
          (current page)
        </span>
      </a>
    </div>
    <div
      class="relative"
      style="opacity: 0; transform: translateY(20px);"
    >
      <a
        aria-label="Contact"
        class="relative flex gap-2 pb-1 hover:text-foreground-muted transition-colors"
        href="/contact"
      >
        <span
          aria-hidden="true"
        >
          <svg
            class="size-4.5 sm:size-5"
            fill="currentColor"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M230.92,212c-15.23-26.33-38.7-45.21-66.09-54.16a72,72,0,1,0-73.66,0C63.78,166.78,40.31,185.66,25.08,212a8,8,0,1,0,13.85,8c18.84-32.56,52.14-52,89.07-52s70.23,19.44,89.07,52a8,8,0,1,0,13.85-8ZM72,96a56,56,0,1,1,56,56A56.06,56.06,0,0,1,72,96Z"
            />
          </svg>
        </span>
        <span
          class="hidden text-sm font-medium sm:block"
        >
          Contact
        </span>
      </a>
    </div>
    <div
      aria-live="polite"
      class="sr-only"
    >
      Use arrow keys to navigate between menu items
    </div>
  </nav>
</div>
`;

exports[`Navbar > Snapshot > should match snapshot on home page 1`] = `
<div>
  <nav
    aria-label="Main navigation"
    class="mocked-archivo bg-background-elevated/80 border-border text-foreground-subtle fixed right-1/2 bottom-4 z-50 flex translate-x-1/2 items-center gap-x-6 rounded-full border px-3 py-2 shadow-lg backdrop-blur-xl *:translate-y-0.5 sm:px-4"
    role="navigation"
    style="opacity: 0; transform: translateY(100px);"
  >
    <div
      class="relative"
      style="opacity: 0; transform: translateY(20px);"
    >
      <a
        aria-current="page"
        aria-label="Home, current page"
        class="relative flex gap-2 pb-1 text-mirai-red"
        href="/"
      >
        <span
          aria-hidden="true"
        >
          <svg
            class="size-4.5 sm:size-5"
            fill="currentColor"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M219.31,108.68l-80-80a16,16,0,0,0-22.62,0l-80,80A15.87,15.87,0,0,0,32,120v96a8,8,0,0,0,8,8h64a8,8,0,0,0,8-8V160h32v56a8,8,0,0,0,8,8h64a8,8,0,0,0,8-8V120A15.87,15.87,0,0,0,219.31,108.68ZM208,208H160V152a8,8,0,0,0-8-8H104a8,8,0,0,0-8,8v56H48V120l80-80,80,80Z"
            />
          </svg>
        </span>
        <span
          class="hidden text-sm font-medium sm:block"
        >
          Home
        </span>
        <div
          class="bg-mirai-red absolute right-0 bottom-0 left-0 h-0.5 rounded-full"
        />
        <span
          class="sr-only"
        >
          (current page)
        </span>
      </a>
    </div>
    <div
      class="relative"
      style="opacity: 0; transform: translateY(20px);"
    >
      <a
        aria-label="Project"
        class="relative flex gap-2 pb-1 hover:text-foreground-muted transition-colors"
        href="/project"
      >
        <span
          aria-hidden="true"
        >
          <svg
            class="size-4.5 sm:size-5"
            fill="currentColor"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M71.59,61.47a8,8,0,0,0-15.18,0l-40,120A8,8,0,0,0,24,192h80a8,8,0,0,0,7.59-10.53ZM35.1,176,64,89.3,92.9,176ZM208,76a52,52,0,1,0-52,52A52.06,52.06,0,0,0,208,76Zm-88,0a36,36,0,1,1,36,36A36,36,0,0,1,120,76Zm104,68H136a8,8,0,0,0-8,8v56a8,8,0,0,0,8,8h88a8,8,0,0,0,8-8V152A8,8,0,0,0,224,144Zm-8,56H144V160h72Z"
            />
          </svg>
        </span>
        <span
          class="hidden text-sm font-medium sm:block"
        >
          Project
        </span>
      </a>
    </div>
    <div
      class="relative"
      style="opacity: 0; transform: translateY(20px);"
    >
      <a
        aria-label="Blog"
        class="relative flex gap-2 pb-1 hover:text-foreground-muted transition-colors"
        href="/blog"
      >
        <span
          aria-hidden="true"
        >
          <svg
            class="size-4.5 sm:size-5"
            fill="currentColor"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M232,48H160a40,40,0,0,0-32,16A40,40,0,0,0,96,48H24a8,8,0,0,0-8,8V200a8,8,0,0,0,8,8H96a24,24,0,0,1,24,24,8,8,0,0,0,16,0,24,24,0,0,1,24-24h72a8,8,0,0,0,8-8V56A8,8,0,0,0,232,48ZM96,192H32V64H96a24,24,0,0,1,24,24V200A39.81,39.81,0,0,0,96,192Zm128,0H160a39.81,39.81,0,0,0-24,8V88a24,24,0,0,1,24-24h64ZM160,88h40a8,8,0,0,1,0,16H160a8,8,0,0,1,0-16Zm48,40a8,8,0,0,1-8,8H160a8,8,0,0,1,0-16h40A8,8,0,0,1,208,128Zm0,32a8,8,0,0,1-8,8H160a8,8,0,0,1,0-16h40A8,8,0,0,1,208,160Z"
            />
          </svg>
        </span>
        <span
          class="hidden text-sm font-medium sm:block"
        >
          Blog
        </span>
      </a>
    </div>
    <div
      class="relative"
      style="opacity: 0; transform: translateY(20px);"
    >
      <a
        aria-label="Contact"
        class="relative flex gap-2 pb-1 hover:text-foreground-muted transition-colors"
        href="/contact"
      >
        <span
          aria-hidden="true"
        >
          <svg
            class="size-4.5 sm:size-5"
            fill="currentColor"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M230.92,212c-15.23-26.33-38.7-45.21-66.09-54.16a72,72,0,1,0-73.66,0C63.78,166.78,40.31,185.66,25.08,212a8,8,0,1,0,13.85,8c18.84-32.56,52.14-52,89.07-52s70.23,19.44,89.07,52a8,8,0,1,0,13.85-8ZM72,96a56,56,0,1,1,56,56A56.06,56.06,0,0,1,72,96Z"
            />
          </svg>
        </span>
        <span
          class="hidden text-sm font-medium sm:block"
        >
          Contact
        </span>
      </a>
    </div>
    <div
      aria-live="polite"
      class="sr-only"
    >
      Use arrow keys to navigate between menu items
    </div>
  </nav>
</div>
`;
